force-app/main/default/objects/LPCR_IDsCongaAdobe__c/LPCR_IDsCongaAdobe__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>ID of the different records used in order to generate conga quotes, conga invoices and adobe agreements</description>
    <label>IDs Conga &amp; Adobe</label>
</CustomObject>