force-app/main/default/objects/LPCR_IDsCongaAdobe__c/fields/LPCR_AAT_ACCUEIL_ADOBE__c.field-meta.xml
<CustomField>
    <fullName>LPCR_AAT_ACCUEIL_ADOBE__c</fullName>
    <label>AAT ACCUEIL FULL ADOBE</label>
    <length>18</length>
    <type>Text</type>
</CustomField>