force-app/main/default/objects/LPCR_IDsCongaAdobe__c/fields/LPCR_AATBON_ACHAT_PARTENAIRE__c.field-meta.xml
<CustomField>
    <fullName>LPCR_AATBON_ACHAT_PARTENAIRE__c</fullName>
    <label>AAT BON ACHAT PARTENAIRE</label>
    <length>18</length>
    <type>Text</type>
</CustomField>