force-app/main/default/objects/LPCR_IDsCongaAdobe__c/fields/LPCR_AATBON_DE_COMMANDE__c.field-meta.xml
<CustomField>
    <fullName>LPCR_AATBON_DE_COMMANDE__c</fullName>
    <label>AAT BON DE COMMANDE</label>
    <length>18</length>
    <type>Text</type>
</CustomField>