force-app/main/default/objects/LPCR_IDsCongaAdobe__c/fields/LPCR_AATCONTRAT_ACCUEIL_ANNEXE_3__c.field-meta.xml
<CustomField>
    <fullName>LPCR_AATCONTRAT_ACCUEIL_ANNEXE_3__c</fullName>
    <label>AAT CONTRAT ACCUEIL - ANNEXE 3</label>
    <length>18</length>
    <type>Text</type>
</CustomField>