force-app/main/default/objects/LPCR_IDsCongaAdobe__c/fields/LPCR_AATCONTRAT_ACCUEIL_MAC_ANNEXE_2__c.field-meta.xml
<CustomField>
    <fullName>LPCR_AATCONTRAT_ACCUEIL_MAC_ANNEXE_2__c</fullName>
    <label>AAT CONTRAT ACCUEIL MAC - ANNEXE 2</label>
    <length>18</length>
    <type>Text</type>
</CustomField>