force-app/main/default/objects/LPCR_IDsCongaAdobe__c/fields/LPCR_AATCONTRAT_ACCUEIL_MICRO__c.field-meta.xml
<CustomField>
    <fullName>LPCR_AATCONTRAT_ACCUEIL_MICRO__c</fullName>
    <label>AAT CONTRAT ACCUEIL MICRO</label>
    <length>18</length>
    <type>Text</type>
</CustomField>