force-app/main/default/objects/LPCR_IDsCongaAdobe__c/fields/LPCR_AATCONTRAT_REFERENCEMENT__c.field-meta.xml
<CustomField>
    <fullName>LPCR_AATCONTRAT_REFERENCEMENT__c</fullName>
    <label>AAT CONTRAT REFERENCEMENT</label>
    <length>18</length>
    <type>Text</type>
</CustomField>