force-app/main/default/objects/LPCR_IDsCongaAdobe__c/fields/LPCR_CIQAccount_Details_CompanyDets__c.field-meta.xml
<CustomField>
    <fullName>LPCR_CIQAccount_Details_CompanyDets__c</fullName>
    <label>CIQ Account Details [CompanyDets]</label>
    <length>18</length>
    <type>Text</type>
</CustomField>