force-app/main/default/objects/LPCR_IDsCongaAdobe__c/fields/LPCR_CIQDebit_Notes__c.field-meta.xml
<CustomField>
    <fullName>LPCR_CIQDebit_Notes__c</fullName>
    <label>CIQ Debit Notes</label>
    <length>18</length>
    <type>Text</type>
</CustomField>