force-app/main/default/objects/LPCR_IDsCongaAdobe__c/fields/LPCR_CIQInvoice_Batch_Query__c.field-meta.xml
<CustomField>
    <fullName>LPCR_CIQInvoice_Batch_Query__c</fullName>
    <label>CIQ Invoice Batch Query</label>
    <length>18</length>
    <type>Text</type>
</CustomField>