force-app/main/default/objects/LPCR_IDsCongaAdobe__c/fields/LPCR_CIQInvoice_Lines_LineItems__c.field-meta.xml
<CustomField>
    <fullName>LPCR_CIQInvoice_Lines_LineItems__c</fullName>
    <label>CIQ Invoice Lines [LineItems]</label>
    <length>18</length>
    <type>Text</type>
</CustomField>