force-app/main/default/objects/LPCR_IDsCongaAdobe__c/fields/LPCR_CIQLigne_Berceau_LigneBerceau__c.field-meta.xml
<CustomField>
    <fullName>LPCR_CIQLigne_Berceau_LigneBerceau__c</fullName>
    <label>CIQ Ligne Berceau [LigneBerceau]</label>
    <length>18</length>
    <type>Text</type>
</CustomField>