force-app/main/default/objects/LPCR_IDsCongaAdobe__c/fields/LPCR_CIQParticipation_CAF__c.field-meta.xml
<CustomField>
    <fullName>LPCR_CIQParticipation_CAF__c</fullName>
    <label>CIQ Participation CAF</label>
    <length>18</length>
    <type>Text</type>
</CustomField>