force-app/main/default/objects/LPCR_IDsCongaAdobe__c/fields/LPCR_CITAttestation_CAF__c.field-meta.xml
<CustomField>
    <fullName>LPCR_CITAttestation_CAF__c</fullName>
    <label>CIT Attestation CAF</label>
    <length>18</length>
    <type>Text</type>
</CustomField>