force-app/main/default/objects/LPCR_IDsCongaAdobe__c/fields/LPCR_CITFacture_B2B__c.field-meta.xml
<CustomField>
    <fullName>LPCR_CITFacture_B2B__c</fullName>
    <label>CIT Facture B2B</label>
    <length>18</length>
    <type>Text</type>
</CustomField>