force-app/main/default/objects/LPCR_IDsCongaAdobe__c/fields/LPCR_CITFacture_B2C_paiement_CB__c.field-meta.xml
<CustomField>
    <fullName>LPCR_CITFacture_B2C_paiement_CB__c</fullName>
    <label>CIT Facture B2C paiement CB</label>
    <length>18</length>
    <type>Text</type>
</CustomField>