force-app/main/default/objects/LPCR_IDsCongaAdobe__c/fields/LPCR_CQQAnnexe2__c.field-meta.xml
<CustomField>
    <fullName>LPCR_CQQAnnexe2__c</fullName>
    <label>CQQ Annexe2</label>
    <length>18</length>
    <type>Text</type>
</CustomField>