force-app/main/default/objects/LPCR_IDsCongaAdobe__c/fields/LPCR_CQQContactInfo__c.field-meta.xml
<CustomField>
    <fullName>LPCR_CQQContactInfo__c</fullName>
    <label>CQQ ContactInfo</label>
    <length>18</length>
    <type>Text</type>
</CustomField>