force-app/main/default/objects/LPCR_IDsCongaAdobe__c/fields/LPCR_CQQGet_List_Price_IDF_et_GrandesVil__c.field-meta.xml
<CustomField>
    <fullName>LPCR_CQQGet_List_Price_IDF_et_GrandesVil__c</fullName>
    <label>CQQ Get List Price IDF et GrandesVilles</label>
    <length>18</length>
    <type>Text</type>
</CustomField>