force-app/main/default/objects/LPCR_IDsCongaAdobe__c/fields/LPCR_CQQInfosContratAccueil__c.field-meta.xml
<CustomField>
    <fullName>LPCR_CQQInfosContratAccueil__c</fullName>
    <label>CQQ InfosContratAccueil</label>
    <length>18</length>
    <type>Text</type>
</CustomField>