force-app/main/default/objects/LPCR_IDsCongaAdobe__c/fields/LPCR_CQQLigneBerceauMicro__c.field-meta.xml
<CustomField>
    <fullName>LPCR_CQQLigneBerceauMicro__c</fullName>
    <label>CQQ Ligne Berceau Micro</label>
    <length>18</length>
    <type>Text</type>
</CustomField>