force-app/main/default/objects/LPCR_IDsCongaAdobe__c/fields/LPCR_CQQLigneBerceauResa__c.field-meta.xml
<CustomField>
    <fullName>LPCR_CQQLigneBerceauResa__c</fullName>
    <label>CQQ Ligne Berceau Resa</label>
    <length>18</length>
    <type>Text</type>
</CustomField>