force-app/main/default/objects/LPCR_IDsCongaAdobe__c/fields/LPCR_CQQLignes_Bons_de_commande__c.field-meta.xml
<CustomField>
    <fullName>LPCR_CQQLignes_Bons_de_commande__c</fullName>
    <label>CQQ Lignes Bons de commande</label>
    <length>18</length>
    <type>Text</type>
</CustomField>