force-app/main/default/objects/LPCR_IDsCongaAdobe__c/fields/LPCR_CQQListTablePrix__c.field-meta.xml
<CustomField>
    <fullName>LPCR_CQQListTablePrix__c</fullName>
    <label>CQQ ListTablePrix</label>
    <length>18</length>
    <type>Text</type>
</CustomField>