force-app/main/default/objects/LPCR_IDsCongaAdobe__c/fields/LPCR_CQQPlanning__c.field-meta.xml
<CustomField>
    <fullName>LPCR_CQQPlanning__c</fullName>
    <label>CQQ Planning</label>
    <length>18</length>
    <type>Text</type>
</CustomField>