force-app/main/default/objects/LPCR_IDsCongaAdobe__c/fields/LPCR_CQQServicesAnnexes__c.field-meta.xml
<CustomField>
    <fullName>LPCR_CQQServicesAnnexes__c</fullName>
    <label>CQQ ServicesAnnexes</label>
    <length>18</length>
    <type>Text</type>
</CustomField>