force-app/main/default/objects/LPCR_IDsCongaAdobe__c/fields/LPCR_CQTAnnexe3__c.field-meta.xml
<CustomField>
    <fullName>LPCR_CQTAnnexe3__c</fullName>
    <label>CQT Annexe3</label>
    <length>18</length>
    <type>Text</type>
</CustomField>