force-app/main/default/objects/LPCR_IDsCongaAdobe__c/fields/LPCR_CQTAnnexe_2_Micro_Regulier__c.field-meta.xml
<CustomField>
    <fullName>LPCR_CQTAnnexe_2_Micro_Regulier__c</fullName>
    <label>CQT Annexe 2 Micro - Régulier</label>
    <length>18</length>
    <type>Text</type>
</CustomField>