force-app/main/default/objects/LPCR_IDsCongaAdobe__c/fields/LPCR_CQTBon_de_commande__c.field-meta.xml
<CustomField>
    <fullName>LPCR_CQTBon_de_commande__c</fullName>
    <label>CQT Bon de commande</label>
    <length>18</length>
    <type>Text</type>
</CustomField>