force-app/main/default/objects/LPCR_IDsCongaAdobe__c/fields/LPCR_CQTContrat_Accueil_MAC__c.field-meta.xml
<CustomField>
    <fullName>LPCR_CQTContrat_Accueil_MAC__c</fullName>
    <label>CQT Contrat Accueil MAC</label>
    <length>18</length>
    <type>Text</type>
</CustomField>