force-app/main/default/objects/LPCR_IDsCongaAdobe__c/fields/LPCR_CQTContrat_Accueil_MICRO_sponsorise__c.field-meta.xml
<CustomField>
    <fullName>LPCR_CQTContrat_Accueil_MICRO_sponsorise__c</fullName>
    <label>CQT Contrat Accueil MICRO sponsorisé</label>
    <length>18</length>
    <type>Text</type>
</CustomField>