force-app/main/default/objects/LPCR_IDsCongaAdobe__c/fields/LPCR_CQTTemplateReferencement__c.field-meta.xml
<CustomField>
    <fullName>LPCR_CQTTemplateReferencement__c</fullName>
    <label>CQT TemplateReferencement</label>
    <length>18</length>
    <type>Text</type>
</CustomField>