force-app/main/default/objects/LPCR_IDsCongaAdobe__c/fields/LPCR_CQTTemplateReservation__c.field-meta.xml
<CustomField>
    <fullName>LPCR_CQTTemplateReservation__c</fullName>
    <label>CQT TemplateReservation</label>
    <length>18</length>
    <type>Text</type>
</CustomField>