force-app/main/default/objects/LPCR_IDsCongaAdobe__c/fields/LPCR_Lines__c.field-meta.xml
<CustomField>
    <fullName>LPCR_Lines__c</fullName>
    <label>LPCR_Lines</label>
    <length>18</length>
    <type>Text</type>
</CustomField>