force-app/main/default/objects/LPCR_IDsCongaAdobe__c/fields/LPCR_ModeleAccordAdobeSignAvenant__c.field-meta.xml
<CustomField>
    <fullName>LPCR_ModeleAccordAdobeSignAvenant__c</fullName>
    <label>LPCR_ModeleAccordAdobeSignAvenant</label>
    <length>18</length>
    <type>Text</type>
</CustomField>