force-app/main/default/objects/LPCR_IDsCongaAdobe__c/fields/LPCR_SignataireLPCR__c.field-meta.xml
<CustomField>
    <fullName>LPCR_SignataireLPCR__c</fullName>
    <label>Signataire LPCR</label>
    <length>18</length>
    <type>Text</type>
</CustomField>