force-app/main/default/objects/LPCR_IDsCongaAdobe__c/fields/LPCR_SignataireLPCRContratReservataireR__c.field-meta.xml
<CustomField>
    <fullName>LPCR_SignataireLPCRContratReservataireR__c</fullName>
    <label>SignataireLPCR Contrat RéservataireRéser</label>
    <length>18</length>
    <type>Text</type>
</CustomField>