force-app/main/default/objects/LPCR_IDsCongaAdobe__c/fields/LPCR_TemplateAvoirPartiel__c.field-meta.xml
<CustomField>
    <fullName>LPCR_TemplateAvoirPartiel__c</fullName>
    <label>LPCR_TemplateAvoirPartiel</label>
    <length>18</length>
    <type>Text</type>
</CustomField>