force-app/main/default/objects/LPCR_IDsCongaAdobe__c/fields/LPCR_TemplateAvoirTotal__c.field-meta.xml
<CustomField>
    <fullName>LPCR_TemplateAvoirTotal__c</fullName>
    <label>LPCR_TemplateAvoirTotal</label>
    <length>18</length>
    <type>Text</type>
</CustomField>