force-app/main/default/objects/LPCR_IDsCongaAdobe__c/fields/LPCR_TemplateIdAvenant__c.field-meta.xml
<CustomField>
    <fullName>LPCR_TemplateIdAvenant__c</fullName>
    <label>LPCR_TemplateIdAvenant</label>
    <length>18</length>
    <type>Text</type>
</CustomField>