force-app/main/default/objects/LPCR_IDsCongaAdobe__c/fields/LPCRAccountRecordTypeIDFamille__c.field-meta.xml
<CustomField>
    <fullName>LPCRAccountRecordTypeIDFamille__c</fullName>
    <label>Account Record Type ID - Famille</label>
    <length>18</length>
    <type>Text</type>
</CustomField>